<resources>
    <string name="app_name">Bzyness</string>

    <!-- Welcome Slider Screens -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book Movie Tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">The easiest way to order food from your favourite restaurant</string>

    <string name="slide_4_title">World Travels</string>
    <string name="slide_4_desc">The easiest way to order food from your favourite restaurant</string>

    <string name="play_again_desc">To see the welcome slider again, go to Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_messenger">Messenger</string>
    <string name="nav_my_bzyness">My Bzyness</string>
    <string name="nav_bzyness_cards">Bzyness Cards</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Messenger</item>
        <item>My Bzyness</item>
        <item>Bzyness Cards</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Login and Register -->
    <string name="hint_email">Email*</string>
    <string name="hint_phone">Mobile No.*</string>
    <string name="hint_cpassword">Confirm Password*</string>
    <string name="hint_password">Password*</string>
    <string name="hint_fname">First Name*</string>
    <string name="hint_lname">Last Name*</string>
    <string name="hint_uname">User Name*</string>
    <string name="hint_uname_login">User Name*</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_link_to_register_guideline">Not a member ?</string>
    <string name="btn_link_to_register">Sign up.</string>
    <string name="btn_link_to_login_guideline">Already Registered !!!</string>
    <string name="btn_link_to_login">Login Me.</string>
    <string name="show_password">Show Password </string>
    <string name="btn_link_to_set_loc">Click to set your business location</string>
    <string name="welcome">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="submit_location">Yes,This is my Location.</string>
    <string name="curr_position_marker_title">My Current Position</string>
    <string name="google_maps_key" translatable="false">AIzaSyBksvxICW4spi7_oip2fm1pG15pGAuiYNo</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_catergory">CatergoryActivity</string>


    <!--Business Details -->
    <string name="type_guideline"> SELECT TYPE OF YOUR BZYNESS</string>
    <string name="subcategory_tag">SubCategory*</string>
    <string name="category_header">Category</string>
    <string name="type_header">TYPE</string>
    <string name="subCategory_header">SubCategory</string>
    <string name="other_layout_header">OTHER</string>
    <string name="location_layout_header">LOCATION</string>
    <string name="product_layout_header">PRODUCTS</string>

    <!--Types-->
    <string name="manufacturer">MANUFACTURER</string>
    <string name="distributor">DISTRIBUTOR</string>
    <string name="professionals">PROFESSIONAL</string>
    <string name="service_provider">SERVICE PROVIDER</string>
    <string name="retailer">RETAILER</string>
    <string name="wholeseller">WHOLE SELLER</string>
    <string name="supplier">SUPPLIER</string>
    <string name="rentals">RENTALS</string>
    <string name="other">OTHER</string>


    <!--Categories-->

    <string name="category_food">FOOD</string>
    <string name="category_movie">MOVIE</string>
    <string name="category_travel">TRAVEL</string>


    <!-- featured photos -->
    <string name="add_feature_photos">ADD FEATURED PHOTOS (MAX 5)</string>


    <!--Common-->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="join_us">Join Us</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_bzyness_name">Bzyness Name</string>
    <string name="hint_alias_name">Alias Name</string>
    <string name="product_category_name">Category Name</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="cancel">cancel</string>
    <string name="add_bzyness_prdct">ADD YOUR BZYNESS PRODUCT</string>
    <string name="no_bzyness_added">You don\'t have any Bzyness yet.</string>
    <string name="add_new_bzyness">Add a New Bzyness</string>


</resources>
