<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bzyness.bzyness.activity.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/business_bg_5"
        android:background="@color/white"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="-2dp"
        android:layout_centerInParent="true"
        />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="bottom"
                android:background="@drawable/bg_rounded_square_holder_register">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/rTextFName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="0.5"
                        android:layout_marginRight="2dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/rEditFName"
                            android:text="Sheeta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_fname"
                            android:padding="10dp"
                            android:background="@drawable/input_box"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/rTextLName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="0.5"
                        android:layout_marginLeft="2dp">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/rEditLName"
                            android:text="Kumar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_lname"
                            android:padding="10dp"
                            android:background="@drawable/input_box"
                            />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rTextUName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Username"
                        android:id="@+id/rEditUName"
                        android:hint="@string/hint_uname"
                        android:padding="10dp"
                        android:background="@drawable/input_box"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rEditEmail"
                        android:text="kumar.mimi@gmail.com"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:background="@drawable/input_box"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rEditPhone"
                        android:hint="@string/hint_phone"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:text="7207700401"

                        android:background="@drawable/input_box"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rEditPassword"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:background="@drawable/input_box"
                        />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_password_btn"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="-10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/show_password"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </LinearLayout>


</FrameLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:background="@color/register_btn_color"
        android:textColor="@color/white"
        android:id="@+id/btnRegister"
        android:onClick="register" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_marginTop="5dip"
        android:background="@android:color/transparent"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/first_color"
        android:textSize="20sp"
        android:onClick="gotoLogin"
        />


</LinearLayout>

