<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background_1"
        android:scaleType="centerCrop"
        android:id="@+id/reg_bg"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:src="@drawable/bzyness_logo_full"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-30dp"
            android:orientation="vertical"
            android:background="@drawable/half_circle"
            android:gravity="center_horizontal|top"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_us"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:padding="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/reg_direction"
            android:layout_marginTop="-8dp"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center_vertical">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/rTextFName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:layout_marginRight="2dp"
                android:background="@drawable/top_rounded_corners_bg_input"
                android:padding="4dp"
                android:textColorHint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rEditFName"
                    android:text="Sheeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fname"
                    android:padding="4dp"
                    android:textColorHint="@color/colorPrimary"
                    android:background="@drawable/all_rounded_corners_bg_input"
                    android:layout_marginTop="2dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/rTextLName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                android:layout_marginLeft="2dp"
                android:background="@drawable/top_rounded_corners_bg_input"
                android:padding="4dp"
                android:textColorHint="@color/colorPrimary">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rEditLName"
                    android:text="Kumar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lname"
                    android:padding="4dp"
                    android:background="@drawable/all_rounded_corners_bg_input"
                    />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rTextUName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:background="@drawable/top_rounded_corners_bg_input"
            android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Username"
                android:id="@+id/rEditUName"
                android:hint="@string/hint_uname"
                android:padding="4dp"
                android:background="@drawable/all_rounded_corners_bg_input"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/rTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:background="@drawable/top_rounded_corners_bg_input"
            android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rEditEmail"
                android:text="kumar.mimi@gmail.com"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="4dp"
                android:background="@drawable/all_rounded_corners_bg_input"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/rTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:background="@drawable/top_rounded_corners_bg_input"
            android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rEditPhone"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:padding="4dp"
                android:text="7207700401"
                android:background="@drawable/all_rounded_corners_bg_input"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/rTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/top_rounded_corners_bg_input"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rEditPassword"
                android:hint="@string/hint_password"
                android:padding="4dp"
                android:inputType="textPassword"
                android:background="@drawable/all_rounded_corners_bg_input" />
        </android.support.design.widget.TextInputLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_password_btn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-5dp"
        android:background="@android:color/transparent"
        android:text="@string/show_password"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

</LinearLayout>
        </ScrollView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/register_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/btnRegister"
                android:layout_gravity="center_horizontal"/>



    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:id="@+id/btnLinkToLoginScreen"
        android:background="@color/light_grey"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        />


    <!--<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:background="@color/theme_color"
    android:minHeight="?attr/actionBarSize"
    android:titleTextColor="#ffffff"/>-->




</LinearLayout>