<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:padding="10dp"
    android:background="@color/white"
    android:elevation="5dp"
    android:animateLayoutChanges="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:id="@+id/type_header"
        android:layout_alignParentTop="true">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/back_det"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save_type"
            android:textColor="@color/white"
            android:background="@color/textColorSecondary"
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:id="@+id/edit_type"
            android:textColor="@color/white"
            android:background="@color/textColorSecondary"
            android:layout_margin="5dp"/>




    </LinearLayout>


    <com.bzyness.bzyness.CustomWidgets.BAppTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_guideline"
        android:textSize="18sp"
        android:typeface="serif"
        android:textColor="@color/textColorSecondary"
        android:id="@+id/type_guideline"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_below="@id/type_header" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_marginTop="5dp"
        android:layout_below="@id/type_guideline"
        android:id="@+id/separator_1"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/separator_1">


            <!--<View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/light_grey" />-->



            <android.support.v7.widget.RecyclerView
                android:id="@+id/grid_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>



        </LinearLayout>


</RelativeLayout>